Lambok updated for the jenkins